@@ -8,6 +8,7 @@ Next Version
 -new option to execute an external program to filter URLs to download
 
  *Bug fixes
+-urls without protocol are supposed to be HTTP
 -changes in libmulk didn't cause a mulk recompilation and shared library was compiled with a wrong define
 -correct parameters printed out when resuming metalink file download
 -avoid compiling MD2 checksum when not present in openssl library
